Take the current XKB config instead of backup

Creating a backup at GDM, means that one won't
get created when logging in.  This breaks the
"Reset to defaults" button in the keyboard layouts
capplet.

https://bugzilla.gnome.org/show_bug.cgi?id=588900